broker/provider/aws/network/template.yml
AWSTemplateFormatVersion: '2010-09-09'

Description:
  AWS Network

Parameters:
  ProjectName:
    Description: ""
    Type: String
  NetworkName:
    Description: ""
    Type: String

Outputs:
  ProjectName:
    Value: !Ref ProjectName
  NetworkName:
    Value: !Ref NetworkName
  InternetFacingSecurityGroup:
    Value: !Ref InternetFacingSecurityGroup
    Export:
      Name: !Sub ${ProjectName}-${NetworkName}-InternetFacingSecurityGroup
  ApplicationSecurityGroup:
    Value: !Ref ApplicationSecurityGroup
    Export:
      Name: !Sub ${ProjectName}-${NetworkName}-ApplicationSecurityGroup
  BackendSecurityGroup:
    Value: !Ref BackendSecurityGroup
    Export:
      Name: !Sub ${ProjectName}-${NetworkName}-BackendSecurityGroup

Resources:
  InternetFacingSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ""
      VpcId: { "Fn::ImportValue": !Sub "${ProjectName}-VPC" }
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}.${NetworkName}.internet-facing
        - Key: ProjectName
          Value: !Ref ProjectName

  ApplicationSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ""
      VpcId: { "Fn::ImportValue": !Sub "${ProjectName}-VPC" }
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}.${NetworkName}.application
        - Key: ProjectName
          Value: !Ref ProjectName

  BackendSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ""
      VpcId: { "Fn::ImportValue": !Sub "${ProjectName}-VPC" }
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}.${NetworkName}.backend
        - Key: ProjectName
          Value: !Ref ProjectName

  RedisIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref BackendSecurityGroup
      SourceSecurityGroupId: !Ref ApplicationSecurityGroup
      IpProtocol: tcp
      FromPort: 6379
      ToPort: 6379

  MySQLGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref BackendSecurityGroup
      SourceSecurityGroupId: !Ref ApplicationSecurityGroup
      IpProtocol: tcp
      FromPort: 3306
      ToPort: 3306

  S3BucketLog:
    Type: AWS::S3::Bucket
    DeletionPolicy: Retain
    Properties:
      BucketName: !Sub
        - ${NetworkName}-log.${ProjectName}.${DomainName}
        - { "DomainName": { "Fn::ImportValue" : {"Fn::Sub": "${ProjectName}-DomainName" } }}
      Tags:
        - Key: Name
          Value: !Sub ${NetworkName}-log.${ProjectName}.${DomainName}
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: NetworkName
          Value: !Ref NetworkName
